# detectorSimulations

./: CMakeCache.txt  CMakeLists.txt  Differences.txt  Makefile  README.md  animation.loop  animation.mac  cmake_install.cmake  detectionSystems.cc  dict.cxx  dict.h  gui.mac  run.mac  validation.mac  vis.mac  visGL.mac  visVRML.mac
8pi/: README
dataRootClass/: Fragment_linkdef.h  Griffin_linkdef.h  History_linkdef.h  Makefile  New_lindef.h  Paces_linkdef.h  README.md  S3_linkdef.h  Sceptar_linkdef.h  Spice_linkdef.h  TFragment.cpp  TFragment.h  TGriffinData.cpp  TGriffinData.h  TGriffinDataDict.cpp  TGriffinDataDict.h  THistoryData.cpp  THistoryData.h  TNewData.cpp  TNewData.h  TPacesData.cpp  TPacesData.h  TS3Data.cpp  TS3Data.h  TS3DataDict.cpp  TS3DataDict.h  TSceptarData.cpp  TSceptarData.h  TSpiceData.cpp  TSpiceData.h  TSpiceDataDict.cpp  TSpiceDataDict.h  TTigFragment.cpp  TTigFragment.h  TigFragment_linkdef.h
include/: Apparatus8piVacuumChamber.hh  Apparatus8piVacuumChamberAuxMatShell.hh  ApparatusFieldBox.hh  ApparatusSpiceTargetChamber.hh  BeamRequestBetaParticle.hh  BeamRequestGammaAndIC.hh  BeamRequestXRay.hh  DetectionSystem8pi.hh  DetectionSystemBox.hh  DetectionSystemBrillance380V1.hh  DetectionSystemGammaTracking.hh  DetectionSystemGrid.hh  DetectionSystemGriffin.hh  DetectionSystemLanthanumBromide.hh  DetectionSystemNew.hh  DetectionSystemPaces.hh  DetectionSystemS3.hh  DetectionSystemSceptar.hh  DetectionSystemSodiumIodide.hh  DetectionSystemSpice.hh  DetectionSystemSpiceV02.hh  DetectorConstruction.hh  DetectorHit.hh  DetectorMessenger.hh  EventAction.hh  HistoManager.hh  MapEvent.h  NewSquareDetector.hh  PhysListEmLowEnergy.hh  PhysListHadron.hh  PhysListParticles.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RawG4Event.hh  RootManager.hh  RunAction.hh  RunMessenger.hh  SensitiveDetector.hh  (+7 more)
src/: Apparatus8piVacuumChamber.cc  Apparatus8piVacuumChamberAuxMatShell.cc  ApparatusFieldBox.cc  ApparatusGenericTarget.cc  ApparatusSpiceTargetChamber.cc  BeamRequestBetaParticle.cc  BeamRequestGammaAndIC.cc  BeamRequestXRay.cc  DetectionSystem8pi.cc  DetectionSystemBox.cc  DetectionSystemBrillance380V1.cc  DetectionSystemGammaTracking.cc  DetectionSystemGrid.cc  DetectionSystemGriffin.cc  DetectionSystemLanthanumBromide.cc  DetectionSystemNew.cc  DetectionSystemPaces.cc  DetectionSystemS3.cc  DetectionSystemSceptar.cc  DetectionSystemSodiumIodide.cc  DetectionSystemSpice.cc  DetectionSystemSpiceV02.cc  DetectorConstruction.cc  DetectorHit.cc  DetectorMessenger.cc  ElementField.cc  EventAction.cc  FieldMessenger.cc  GlobalField.cc  HistoManager.cc  MapEvent.cc  NewSquareDetector.cc  PhysListEmLowEnergy.cc  PhysListHadron.cc  PhysListParticles.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RawG4Event.cc  (+10 more)
validation/: ValidationSort.cc
